<resources>
    <string name="app_name">Calculator</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="ope_addition">+</string>
    <string name="ope_subtraction">-</string>
    <string name="ope_multiplication">*</string>
    <string name="ope_division">/</string>
    <string name="ope_equal">=</string>
    <string name="button_text_back">←</string>
    <string name="button_text_clear">C</string>
    <string name="button_text_point">.</string>
</resources>
