<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.calculator.CalcViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toTopOf="@+id/layout_grid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/layout_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_result"
            app:layout_constraintBottom_toBottomOf="parent"

            android:columnCount="4"
            android:rowCount="5">
            <Button
                android:id="@+id/button_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_one"
                />
            <Button
                android:id="@+id/button_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_two"
                />
            <Button
                android:id="@+id/button_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_three"
                />
            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/ope_addition"
                />
            <Button
                android:id="@+id/button_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_four"
                />
            <Button
                android:id="@+id/button_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_five"
                />
            <Button
                android:id="@+id/button_six"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_six"
                />
            <Button
                android:id="@+id/button_subtract"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/ope_subtraction"
                />
            <Button
                android:id="@+id/button_seven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_seven"
                />
            <Button
                android:id="@+id/button_eight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/num_eight"
                />
            <Button
                android:id="@+id/button_nine"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/num_nine"
                />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/ope_division"
                />

            <Button
                android:id="@+id/button_zero"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/num_zero"
                />
            <Button
                android:id="@+id/button_point"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_text_point"
                />
            <Button
                android:id="@+id/button_equal"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/ope_equal"
                />

            <Button
                android:id="@+id/button_multi"
                android:layout_width="0dp"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:text="@string/ope_multiplication"
                />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
